[package]
name = "visual_programming_environment"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}

winit = {version = "0.24.0"}
rand = "0.7"
getrandom = {version="0.1", features=["wasm-bindgen"]}
uuid = "0.8.2"
petgraph = "0.6.0"
bevy_egui = "0.6.1"
strum = { version = "0.21", features = ["derive"] }
strum_macros = "0.21.1"
bevy_mod_bounding = "0.1.1"

# [patch.'https://github.com/bevyengine/bevy']
# bevy = {git = "https://github.com/bevyengine/bevy//", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features=false}

# [patch.'https://github.com/mrk-its/bevy_webgl2']
# bevy_webgl2 = {git = "https://github.com/mrk-its/bevy_webgl2//", rev="035236b8d7ec52b8e9e20399662e89c73e4521f6", default-features=false}

[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'